// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Styled StyledButton component should match snapshot 1`] = `
.c0 {
  border: solid 2px #1D232B;
  border-radius: 3px;
  font-family: 'Oswald',sans-serif;
  font-size: 1rem;
  font-weight: bold;
  line-height: 1.2;
  background-color: #F9F9F9;
  color: #1D232B;
  opacity: 1;
  padding: 0.5rem;
  outline: none;
  -webkit-transition: all 0.1s ease-in;
  transition: all 0.1s ease-in;
  border-radius: 3px;
  text-transform: none;
  cursor: pointer;
  text-align: center;
  margin-right: 0.5rem;
}

.c0:hover {
  border-color: #90D3DC;
}

.c0:hover {
  color: #90D3DC;
}

<button
  className="c0"
  disabled={false}
  size="normal"
/>
`;

exports[`Styled StyledButton component should match snapshot with disabled prop 1`] = `
.c0 {
  border: solid 2px #1D232B;
  border-radius: 3px;
  font-family: 'Oswald',sans-serif;
  font-size: 1rem;
  font-weight: bold;
  line-height: 1.2;
  background-color: #F9F9F9;
  color: #1D232B;
  opacity: 0.5;
  padding: 0.5rem;
  outline: none;
  -webkit-transition: all 0.1s ease-in;
  transition: all 0.1s ease-in;
  border-radius: 3px;
  text-transform: none;
  cursor: not-allowed;
  text-align: center;
  margin-right: 0.5rem;
}

<button
  className="c0"
  disabled={true}
  size="normal"
/>
`;
